<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/brown"
        android:minHeight="48dp"
        android:padding="-3dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/cream"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinPasswordEditText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_lcalligraphy" />

    <TextView
        android:id="@+id/signinEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Email: "
        android:textColor="@color/sage"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView"
        tools:text="Email:" />

    <TextView
        android:id="@+id/signinPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Password: "
        android:textColor="@color/sage"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinEmailText"
        tools:text="Password" />

    <EditText
        android:id="@+id/signinEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/sage"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColor="@color/sage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signinEmailText"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView" />

    <EditText
        android:id="@+id/signinPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/sage"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/sage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signinEmailText"
        app:layout_constraintTop_toBottomOf="@+id/signinEmailEditText" />


    <TextView
        android:id="@+id/signinReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        android:textColor="@color/sage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinGoogle" />

    <TextView
        android:id="@+id/signinSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No account? Tap here."
        android:textColor="@color/sage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinReset" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="@color/sage"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/signinGoogle"
        android:layout_width="175dp"
        android:layout_height="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>